# sigaex/src/main/java/br/gov/jfrj/siga/ex/api/v1/IExApiV1.java
@@ -1368,9 +1368,38 @@ public interface IExApiV1 {
         public void run(Request req, Response resp, ExApiV1Context ctx) throws Exception;
     }
 
+    public interface INumeracaoExpedientePost extends ISwaggerMethod {
+        public static class Request implements ISwaggerRequest {
+            public String siglaorgao;
+            public String formadoc;
+            public String tiposequencia;
+            public String anoemissao;
+        }
+
+        public static class Response implements ISwaggerResponse {
+            public String sigladoc;
+        }
+
+        public void run(Request req, Response resp, ExApiV1Context ctx) throws Exception;
+    }
+
+    public interface INumeracaoGenericaPost extends ISwaggerMethod {
+        public static class Request implements ISwaggerRequest {
+            public String tiposequencia;
+            public String anoemissao;
+            public String zerarinicioano;
+        }
+
+        public static class Response implements ISwaggerResponse {
+            public String sequenciagenerica;
+            public String digitoverificador;
+        }
+
+        public void run(Request req, Response resp, ExApiV1Context ctx) throws Exception;
+    }
+
     public interface IDocumentosPost extends ISwaggerMethod {
         public static class Request implements ISwaggerRequest, ISwaggerRequestFile {
-            public Boolean codigoUnico;
             public String sigla;
             public String modelo;
             public String siglamobilpai;
@@ -1430,7 +1459,6 @@ public interface IExApiV1 {
 
         public static class Response implements ISwaggerResponse {
             public String sigladoc;
-            public String codigoUnico;
         }
 
         public void run(Request req, Response resp, ExApiV1Context ctx) throws Exception;
