# sigaex/src/main/resources/br/gov/jfrj/siga/ex/api/v1/swagger.yaml
@@ -500,6 +500,42 @@ parameters:
     default: false
     type: boolean
 
+    siglaorgao:
+      name: siglaorgao
+      in: query
+      description: Sigla do órgão, por exemplo 'ZZ'
+      required: true
+      type: string
+
+  formadoc:
+    name: formadoc
+    in: query
+    description: Informa a sigla da forma do documento, por exemplo 'PRC'
+    required: true
+    type: string
+
+  anoemissao:
+    name: anoemissao
+    in: query
+    description: Informa o ano de emissão no formato 'aaaa'
+    pattern: ^\d{4}
+    required: true
+    type: string
+
+  tiposequencia:
+    name: tiposequencia
+    in: query
+    description: Informa o ID da sequência a ser utilizado.
+    required: true
+    type: string
+
+  zerarinicioano:
+    name: zerarinicioano
+    in: query
+    description: Informa se a sequência será zerada a cada início de ano.
+    required: true
+    type: string
+
 ################################################################################
 #                                           Paths                              #
 ################################################################################
@@ -2366,6 +2402,74 @@ paths:
                 type: string
         403:
           description: Inclusão de documento não permitida
+          schema:
+            $ref: "#/definitions/Error"
+        500:
+          description: Error ocurred
+          schema:
+            $ref: "#/definitions/Error"
+
+  /numeracao-expediente:
+    post:
+      description: Utilize este método para gerar numeração de expediente.
+      consumes:
+        - multipart/form-data
+        - application/x-www-form-urlencoded
+      tags: [acao]
+      security:
+        - Bearer: []
+      parameters:
+        - $ref: "#/parameters/siglaorgao"
+        - $ref: "#/parameters/formadoc"
+        - $ref: "#/parameters/tiposequencia"
+        - $ref: "#/parameters/anoemissao"
+      summary: Gerar Sigla Sem Papel
+      responses:
+        200:
+          description: Successful response
+          schema:
+            type: object
+            properties:
+              sigladoc:
+                description: Sigla do documento
+                type: string
+        403:
+          description: Geração não permitida
+          schema:
+            $ref: "#/definitions/Error"
+        500:
+          description: Error ocurred
+          schema:
+            $ref: "#/definitions/Error"
+
+  /numeracao-generica:
+    post:
+      description: Utilize este método para gerar numeração de uma sequência genérica.
+      consumes:
+        - multipart/form-data
+        - application/x-www-form-urlencoded
+      tags: [ acao ]
+      security:
+        - Bearer: [ ]
+      parameters:
+        - $ref: "#/parameters/tiposequencia"
+        - $ref: "#/parameters/anoemissao"
+        - $ref: "#/parameters/zerarinicioano"
+      summary: Gerar Sequência Genérica
+      responses:
+        200:
+          description: Successful response
+          schema:
+            type: object
+            properties:
+              sequenciagenerica:
+                description: Sequência genérica (também chamado de código único)
+                type: string
+              digitoverificador:
+                description: Digito verificador da sequência genérica
+                type: string
+        403:
+          description: Geração não permitida
           schema:
             $ref: "#/definitions/Error"
         500:
